--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
-    "bookshelf": "^0.9.4",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "knex": "^0.10.0",
+    "express-session": "~1.0.0",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
