--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "~1.0.0",
+    "headroom.js": "^0.9.3",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
