--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "homepage": "https://github.com/bokherus/Articlex#readme",
   "dependencies": {
+    "angular-relative-date": "^2.0.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "~1.0.0",
+    "headroom.js": "^0.9.3",
     "mysql": "^2.10.2",
+    "nprogress": "^0.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
